service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-demo2-service
  namespace: java-demo2
spec:
  selector:
    app: java-demo2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
